# MOQD-CSP

./: .gitignore  .gitmodules  README.md  a_cvt_plots_test.py  analysis.py  batch_experiment.py  benchmark_optimizers.py  benchmark_optimizers_2.py  copy_configs_and_scripts.sh  experiment_from_config.py  experiment_from_config_cma.py  fetch_results.sh  force_mutation.py  get_results_from_slurm.sh  gpu_support.py  hpc_gpu_test.py  hunting_script.py  launch_from_archive.py  main.py  mome_main.py  plot_moqd_illumination.py  plot_reference_illumination.py  predict_structure_speed.py  prepare_reference_data.py  process_all_results.py  pyproject.toml  relax_archive.py  relaxation_speed_compatison.py  requirements.txt  run_experiment.py  run_job_on_cluster.sh  script_job.sh  script_job_2.sh  script_job_3.sh  script_job_4.sh  script_job_5.sh  update_slurm_folder.sh
analysis/: average_results_for_n_experiments.py  convert_force_threshold_archive_to_energy_only.py  dqd.ipynb  fmax_for_archive.py  grouping_structures_in_archive.py  plot_comparison_statistics_multiple_experiments.py
analysis_functions/: compute_sparsity_metrics.py  convert_force_threshold_archive_to_energy_only.py  error_shear_mod_on_mp_data.py  experiment_processing.py  load_datasets.py  plot_final_pfs.py  plot_grid.py  print_min_max_rewards.py  report_plot_generator.py  run_analysis.py  wilcoxon_analysis.py
apptainer/: container.def  hpc.yaml
configs/: 1000_niches.json  200_niches_100k_for_benchmark.json  200_niches_100k_for_benchmark_100_relax.json  200_niches_100k_relax_every_15k_generations.json  200_niches_10_relax_steps.json  200_niches_150k_relax_every_100.json  200_niches_1M.json  200_niches_1M_force_threshold.json  200_niches_1M_force_threshold_10_relax.json  200_niches_1M_force_threshold_10_relax_random.json  200_niches_1M_no_force_threshold.json  (+18 more)
(+406 files in other folders)
