[tool.poetry]
name = "csp-elites"
version = "0.1.0"
description = ""
authors = ["Marta Wolinska <marta.wolinska16@imperial.ac.uk>"]
readme = "README.md"
packages = [{include = "csp_elites"}]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
sciplot = "^0.8.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
qdax = "^0.2.2"
ase = "^3.22.1"
mp-api = "^0.33.3"
jax = "^0.4.10"
chex = "^0.1.7"
pylint = "^2.17.4"
jupyter = "^1.0.0"
matgl = "^0.7.0"
torch = "^2.0.1"
tqdm = "^4.65.0"
megnet = "^1.3.2"
tensorflow = "^2.13.0"
spglib = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
