[tool.poetry]
name = "csp-elites"
version = "0.1.0"
description = ""
authors = ["Marta Wolinska <marta.wolinska16@imperial.ac.uk>"]
readme = "README.md"
packages = [
    {include = "csp_elites"},
    {include = "retrieve_results"},
]


[tool.poetry.dependencies]
python = "^3.9, <3.11"
sciplot = "^0.8.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
qdax = "^0.2.2"
ase = "^3.22.1"
mp-api = "^0.33.3"
jax = "^0.4.10"
chex = "^0.1.7"
pylint = "^2.17.4"
jupyter = "^1.0.0"
matgl = "^0.7.0"
torch = "^2.0.1"
tqdm = "^4.65.0"
tensorflow = "2.13.0"
spglib = "^2.0.2"
imageio = "^2.31.1"
cairosvg = "^2.7.0"
pyxtal = "^0.5.8"
csp-cryspy = "^1.2.0"
pandas = "^2.0.3"
chgnet = {git = "https://github.com/CederGroupHub/chgnet.git"}
vtk = "^9.2.6"
chemview = "^0.6"
pillow = "^10.0.0"
seaborn = "^0.12.2"
ribs = "^0.5.2"
black = "^23.7.0"
scienceplots = "^2.1.0"
click = "^8.1.7"
pymatgen = "^2023.9.25"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
